--- a/.github/workflows/ContiniousIntegration.yml
+++ b/.github/workflows/ContiniousIntegration.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Continious Integration
 
 # Controls when the action will run. Triggers the workflow on push or pull request 
@@ -31,4 +29,4 @@ jobs:
         docker buildx build . \
           --platform linux/arm,linux/amd64 \
           --tag horizon0156/occu-hmip:dev \
-          --push \
+          --push
