Add DeviceDescriptionsHome option

--- a/data/crRFD.conf
+++ b/data/crRFD.conf
@@ -5,6 +5,7 @@ Config.Dir=/data/crRFD
 Persistence.Home=/data/crRFD
 FirmwareUpdate.BG.OTAU.Home=/etc/config/firmware
 FirmwareUpdate.BG.OTAU.divergent.device.type.definition.file=/opt/HmIP/crrfd.fwfix
+DeviceDescriptionsHome=/etc/descriptions
 
 # Legacy API Configuration
 API.1.Type=XML-RPC
