Add network key configuration

--- a/data/crRFD.conf
+++ b/data/crRFD.conf
@@ -6,6 +6,8 @@ Persistence.Home=/data/crRFD
 FirmwareUpdate.BG.OTAU.Home=/etc/config/firmware
 FirmwareUpdate.BG.OTAU.divergent.device.type.definition.file=/opt/HmIP/crrfd.fwfix
 
+Network.Key=01020304010203040102030401020304
+
 # Legacy API Configuration
 API.1.Type=XML-RPC
 Legacy.Encoding=ISO-8859-1
