--- a/.github/workflows/cd_dev.yml
+++ b/.github/workflows/cd_dev.yml
@@ -1,15 +1,15 @@
-name: Continious Delivery
+name: Continious Delivery (Dev.)
 
 # Controls when the action will run. Triggers the workflow on push or pull request 
 # events but only for the master branch
 on:
-  release:
-    types: [published, prereleased]
+  push:
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "publish"
-  publish:
+  # This workflow contains a single job called "publish-dev"
+  publish-dev:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -28,6 +28,5 @@ jobs:
       run: |
         docker buildx build . \
           --platform linux/arm,linux/amd64 \
-          --tag horizon0156/occu-hmip:latest \
-          --tag horizon0156/occu-hmip:${GITHUB_REF##*/} \
+          --tag horizon0156/occu-hmip:dev \
           --push
